--- a/Application/src/main/res/layout/fragment_camera2_video.xml
+++ b/Application/src/main/res/layout/fragment_camera2_video.xml
@@ -20,17 +20,18 @@
     <com.example.android.camera2video.AutoFitTextureView
         android:id="@+id/texture"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="500dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#fff4614d"
+        android:backgroundTint="#ffff723a"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/texture"
-        android:background="#4285f4">
+        android:layout_below="@+id/texture">
 
         <Button
             android:id="@+id/video"
